# CMinus-Lexer-Parser

./: README.md
documents/: CMinus词法和语法规则.md
lexer/: .gitignore  CMakeLists.txt  README.md  make.bat
lexer/include/: Buffer.h  Lexer.h  TokenType.h
lexer/src/: main.cpp
lexer/src/static/: Lexer.cpp  TokenType.cpp  buffer.cpp
lexer/targetCode/: input.c
lexer/test_cases/: input.c  operator.cpp  output.txt  output2.txt
parser/: .gitignore  CMakeLists.txt  copy_lexer2parser.bat  make.bat
parser/include/: TokenType.h
parser/include/lexer/: Lexer.h
parser/include/parser/: abstract_tree.h  parser.h  tmp_factor.cpp
parser/src/: main.cpp
parser/src/static/: TokenType.cpp
parser/src/static/lexer/: Lexer.cpp
parser/src/static/parser/: Parser.cpp  abstract_tree.cpp
parser/test_cases/: input.c  input1.c  input2.c  intput2.c  output1.txt
